tests/invalid/variables/no_semicolon.rs
/*
fail: 1
*/

main(): i32 {
    a: i64 = 2
    a = a + 4;
    return a;
}